--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -135,8 +135,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('logs.index') }}">
-                            <i class="fas fa-list-alt me-1"></i>操作日志
+                        <a class="nav-link" href="{{ url_for('admin.system_logs') }}">
+                            <i class="fas fa-file-alt me-1"></i>系统日志
                         </a>
                     </li>
                     {% if current_user.is_authenticated and current_user.role == 'admin' %}
