--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -135,7 +135,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin.system_logs') }}">
+                        <a class="nav-link" href="{{ url_for('admin.system_logs_page') }}">
                             <i class="fas fa-file-alt me-1"></i>系统日志
                         </a>
                     </li>
